crates/hexeract-macros/tests/ui/fail_notification_non_unit.stderr
error: a notification handler must return `Result<(), Error>`
  --> tests/ui/fail_notification_non_unit.rs:12:68
   |
12 |     async fn handle(&self, _n: N, _ctx: &HandlerContext) -> Result<i32, HexeractError> {
   |                                                                    ^^^

warning: unused imports: `HandlerContext` and `HexeractError`
 --> tests/ui/fail_notification_non_unit.rs:1:21
  |
1 | use hexeract_core::{HandlerContext, HexeractError, Notification};
  |                     ^^^^^^^^^^^^^^  ^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default
